Fix cut off text on shorts block [WEB-3301]

--- a/frontend/scss/pages/types/_t-videos.scss
+++ b/frontend/scss/pages/types/_t-videos.scss
@@ -119,7 +119,11 @@
           }
           .o-grid-listing {
               flex-flow: row;
-              overflow: hidden;
+              overflow-x: hidden;
+
+              a::after{
+                margin-bottom: 0px;
+              }
           }
           .m-listing__img {
               border-radius: 8px;
